Java 8 fixes