@@ -300,7 +300,7 @@ public class CharSequencesTest {
     assertThrows(IndexOutOfBoundsException.class, () -> s.subSequence(0, 1));
     assertThrows(IndexOutOfBoundsException.class, () -> s.subSequence(1, 0));
     IndexOutOfBoundsException exception = assertThrows(IndexOutOfBoundsException.class, () -> s.charAt(0));
-    if (isJava9OrLater()) {
+    if (this.isJava9OrLater()) {
       assertThat(exception.getMessage(), endsWith("ndex out of range: 0"));
     }
   }
@@ -315,7 +315,7 @@ public class CharSequencesTest {
   }
 
   public static List<CharSequence> emptySequences() {
-    return List.of("", CharSequences.EMPTY);
+    return Arrays.asList("", CharSequences.EMPTY);
   }
 
   @Test
